billing/billing-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
      - name: billing
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        # resources:
        #   limits:
        #     memory: "1000Mi"
        #     cpu: "100m"
        #   requests:
        #     memory: "100Mi"
        #     cpu: "100m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: billing  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: billing
